# GLCM

./: .gitignore  CMakeLists.txt  GetHaralickFeatures.sh  ImagenesFDM.xlsx  README.md  Test.m  glcmPlots.m  main.cpp
Libraries/: CVMatlabInterface.cpp  CVMatlabInterface.h  LinkedList.cpp  LinkedList.h  glcm.cpp  glcm.h
Outputs/: BadQuality1.csv  GoodQuality1.csv  GoodQuality2.csv  GoodQuality3.csv  HighQuality1.csv  HighQuality10.csv  HighQuality11.csv  HighQuality12.csv  HighQuality13.csv  HighQuality14.csv  HighQuality15.csv  HighQuality2.csv  HighQuality3.csv  HighQuality4.csv  HighQuality5.csv  HighQuality6.csv  HighQuality7.csv  HighQuality8.csv  HighQuality9.csv  HighQualityWithCracks1.csv  LowQuality1.csv  LowQuality10.csv  LowQuality11.csv  LowQuality12.csv  LowQuality13.csv  LowQuality2.csv  LowQuality3.csv  LowQuality4.csv  LowQuality5.csv  LowQuality6.csv  LowQuality7.csv  LowQuality8.csv  LowQuality9.csv  LowQualityWithCracks1.csv  ModerateHighQuality1.csv  ModerateHighQuality2.csv  ModerateHighQuality3.csv  ModerateHighQuality4.csv  ModerateHighQualityWithCracks1.csv  ModerateLowQuality1.csv  (+14 more)
